--- a/style.css
+++ b/style.css
@@ -11,147 +11,280 @@ html {
 }
 
 body {
+  height: 100vh;
   box-sizing: border-box;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
 }
 
-h1 {
-  font-size: 5rem;
-}
 
-a {
-  list-style: none;
-  text-decoration: none;
-  color: inherit;
-}
 
-ul {
-  list-style: none;
-}
-
-.nav__bar {
+.header {
+  top: 0;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  position: fixed;
+  z-index: 1;
 }
 
-.nav__bar--left {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  padding-left: 1rem;
+.nav {
+  width: 100%;
+  height: 5rem;
+  display: flex;
   align-items: center;
 }
 
-.nav__bar--right {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(min-content, max-content));
+nav div {
+  display: flex;
+  width: 50%;
+  padding: 1rem;
   align-items: center;
 }
 
-.nav__items {
-  padding: 1.5rem 1.5rem 0 0.7rem;
+nav div:nth-child(1) {
+  justify-content: start;
 }
 
-.nav__btn {
-  display: inline-block;
-  padding: 1rem 2rem;
-  color: #fff;
-  background-color: rgb(43, 4, 212);
-  border-radius: 4px;
-  border: none;
+nav div:nth-child(2) {
+  justify-content: flex-end;
+}
+
+nav div a {
+  padding: 0.5rem;
+  text-decoration: none;
+  color: #3b3b3b;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+
+#login {
+  background: url("img/profile.jpeg");
+  height: 3rem;
+  width: 3rem;
+  background-size: cover;
+  border-radius: 50%;
   cursor: pointer;
 }
 
-.blue {
-  color: blue;
-}
 
-.red {
-  color: red;
-}
-
-.yellow {
-  color: yellow;
-}
-
-.green {
-  color: green;
-}
-
-.header {
-  height: 65vh;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin-top: 20rem;
-  position: relative;
-}
-
-.header__h1 {
+.popup {
   position: absolute;
-  left: 49rem;
-  top: -4.2rem;
-}
-
-.header__container {
-  flex-direction: column;
+  top: 6rem;
+  right: 2rem;
+  width: 20rem;
+  height: 33rem;
+  background-color: #fff;
+  border: 1px solid #c0c0c0;
+  flex-wrap: wrap;
+  align-content: space-around;
   justify-content: center;
-  align-content: center;
+  box-shadow: 1px -1px 5px silver;
+  z-index: 99;
+  border-radius: 1rem;
 }
+.popup a {
+  text-decoration: none;
+  color: #3b3b3b;
+  display: flex;
+  flex-direction: column;
+  align-content: left;
+  
+  width: 9rem;
+  height: 9rem;
+  padding: 1rem;
 
-.search {
-  padding: 2rem 0;
 }
-
-.search__input {
-  width: 50rem;
-  height: 4rem;
-  border-radius: 10rem;
-  border: 1px solid rgb(182, 177, 177);
-  margin-left: -4rem;
-  margin-right: -4rem;
+.popup a:hover {
+  background-color: #e8f0fe;
 }
-
-.search__input:hover {
-  box-shadow: 0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
+.popup a div:nth-of-type(1) {
+  height: 4.8rem;
+  width: 4.8rem;
 }
 
 .search__icon {
-  border: none;
+  height: 3rem;
+  width: 3rem;
+  justify-content: center;
+}
+
+.first-sprite {
+  fill: rgb(221, 212, 212);
+}
+.second-sprite {
+  fill: rgb(190, 42, 42);
+}
+.third-sprite {
+  fill: rgb(53, 52, 52);
+}
+.fourth-sprite {
+  fill: rgb(236, 236, 9);
+}
+.fifth-sprite {
+  fill: red;
+}
+
+.sixth-sprite {
+  fill: rgb(13, 104, 13);
+}
+.sprite_text {
+  padding-top: 0.5rem;
+}
+
+
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding-top: 22rem;
+}
+main img {
+  display: block;
+  margin: 0 auto;
+}
+
+.main__container {
+  display: flex;
+}
+.main__icon-1 {
+  margin-right: -6rem;
   position: relative;
   z-index: 10;
-  top: 0.9rem;
 }
 
-.btn {
-  padding: 0.7rem 1rem;
-  border: none;
-  background-color: rgb(252, 246, 246);
-  border-radius: 1rem;
+.main__container > .main__icon {
+  margin-left: -6rem;
 }
 
-.btn-header-1 {
-  position: absolute;
-  left: 60rem;
-  top: 8rem;
+.menu {
+  background-position: -13.1rem -3.7rem;
+  padding: 0;
+  height: 3.2rem;
+  width: 3.2rem;
+}
+.menu:hover {
+  background-color: #e8f0fe;
+  border-radius: 50%;
+  
 }
 
-.btn-header-2 {
-  position: absolute;
-  top: 8rem;
-  left: 45rem;
+.nightModeSprite {
+  position: fixed;
+  bottom: 7rem;
+  right: 2.5rem;
+  height: 2.5rem;
+  width: 2.5rem;
+  background-position: -21.2rem -4rem;
+  cursor: pointer;
+}
+.nightModeSprite:hover {
+  transform: scale(1.1);
 }
 
-.footer {
-  background-color: rgb(240, 235, 235);
+.screenDark {
+  background-color: #35363a;
+  color: #fff;
+}
+.screenDark nav div a {
+  color: #fff;
+}
+.screenDark .popup {
+  background-color: cyan;
+ 
+  border: 1px solid #000;
+}
+
+.screenDark .buttons div {
+  color: #fff;
+  background-color: #2c2d31;
+}
+.screenDark footer {
+  background-color: #2c2d31;
+  
+}
+
+.screenDark footer div a {
+  color: #fff;
+}
+
+.screenDark #search {
+  background-color: #393a3f;
+  color: #fff;
+}
+
+#search {
+  width: 50vw;
+  max-width: 500px;
+  height: 40px;
+  border: 1px solid #e1e1e1;
+  border-radius: 50px;
+  padding: 0 40px;
+  font-size: initial;
+  margin: 20px;
+}
+#search:hover,
+#search:active,
+#search:focus {
+  box-shadow: 0px 1.7px 5px #dfdfdf;
+  outline: none;
+}
+.btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+}
+.btns div {
+  margin: 5px;
+  padding: 10px;
+  color: #3b3b3b;
+  background-color: #eee;
+  border-color: #c0c0c0;
+  cursor: pointer;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+.btns div:hover {
+  border: 1px solid #c0c0c0;
+}
+.btns a:hover {
+  text-decoration: none;
+}
+
+footer {
+  background-color: #eeeeee;
+  padding: 5px;
+  padding-top: 1.3rem;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   height: 5vh;
 }
 
-.footer__list {
+.footer__nav {
   display: flex;
-  justify-content: space-between;
-  padding: 1.2rem 2.5rem;
+  justify-content: space-around;
 }
 
-.footer__list:hover {
+.footer__tag{
+  color:#3b3b3b;
+  text-decoration: none;
+}
+.footer__tag:hover{
   text-decoration: underline;
+}
+
+.leaf{
+  fill: green;
+  position: relative;
+  left: 6.5rem;
+  width: 2rem;
+  height: 2rem;
+
 }
